@@ -1002,7 +1002,7 @@ void perform_violence(void)
 
     /* should master auto-assist followers?  */
     if (ch->master && PRF_FLAGGED(ch->master, PRF_AUTOASSIST) &&
-        FIGHTING(ch) && !FIGHTING(ch->master) &&
+        FIGHTING(ch) && !FIGHTING(ch->master) && !IS_NPC(ch) &&
         (IN_ROOM(ch->master) == IN_ROOM(ch)) && !IS_NPC(ch->master))
       do_assist(ch->master, GET_NAME(ch), 0, 0);
 
